apps/bluegreen/rollback-window/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: bluegreen-demo
spec:
  replicas: 3
  revisionHistoryLimit: 1
  # https://argo-rollouts.readthedocs.io/en/stable/features/rollback/
  rollbackWindow:
    revisions: 1
  selector:
    matchLabels:
      app: bluegreen-demo
  template:
    metadata:
      labels:
        app: bluegreen-demo
    spec:
      containers:
      - name: bluegreen-demo
        image: argoproj/rollouts-demo:yellow
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
  strategy:
    blueGreen:
      previewService: bluegreen-demo-preview
      activeService: bluegreen-demo-stable
      scaleDownDelaySeconds: 3600
      scaleDownDelayRevisionLimit: 1
