apps/bluegreen/rollback-window/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluegreen-demo
spec:
  ingressClassName: nginx
  rules:
  - host: bluegreen.dev.argoproj.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: bluegreen-demo-stable
            port:
              name: http
